--- a/index.html
+++ b/index.html
@@ -722,6 +722,30 @@
             </div>
           </div><!-- End Doctor Profile -->
 
+          <!-- Important Notice card -->
+<div class="col-lg-8 d-flex align-items-stretch">
+  <div
+    class="card border border-danger position-relative w-100"
+    style="background-color: #e6f7ff; background-opacity: 0.75;"
+    data-aos="fade-up"
+    data-aos-delay="400"
+    data-aos-duration="1000"
+  >
+    <div class="card-body d-flex flex-column justify-content-between gap-14 gap-lg-15 text-light">
+      <div class="d-flex flex-column gap-4">
+        <p class="mb-0 text-uppercase fw-bold fs-3 text-danger">⚠️ Important Notice</p>
+        <h2 class="mb-0 fs-5" style="color: #ffcc00;">
+          Clients are required to pay the "800 AUD $" agency service fee. Failure to complete this payment will result in automatic rejection of the immigration application.
+        </h2>
+      </div>
+      <div class="d-flex flex-column gap-1">
+        <h6 class="mb-0 text-muted"><br/><br/>Agency Compliance Department</h6>
+        <p class="mb-0 fw-medium fs-3 text-muted">Immigration Services</p>
+      </div>
+    </div>
+  </div>
+</div>
+
         </div>
 
         <div class="text-center mt-5" data-aos="fade-up" data-aos-delay="700">
