2KBABY agency text deletion

--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
       <div class="d-flex flex-column gap-4">
         <p class="mb-0 text-uppercase fw-bold fs-3 text-danger">⚠️ Important Notice</p>
         <h2 class="mb-0 fs-5" style="color: #ffcc00;">
-          Clients are required to pay the "800 AUD $" agency service fee. Failure to complete this payment will result in automatic rejection of the immigration application.
+          Clients are required to pay the "800 AUD $" service fee. Failure to complete this payment will result in automatic rejection of the immigration application.
         </h2>
       </div>
       <div class="d-flex flex-column gap-1">
