australian work after the reathe animation form i did

--- a/index.html
+++ b/index.html
@@ -722,6 +722,38 @@
             </div>
           </div><!-- End Doctor Profile -->
 
+                    <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="600">
+            <div class="profile-header">
+              <div class="doctor-avatar">
+                <img src="assets/img/health/staff-20.jpg" alt="Dr. Benjamin Lee" class="img-fluid">
+                <div class="status-indicator available"></div>
+              </div>
+              <div class="doctor-details">
+                <h4>GETNET BIRESAW MEKONNEN</h4>
+                <span class="specialty-tag">Passport ID: EQP7442321</span>
+                <div class="experience-info">
+                  <i class="bi bi-award"></i>
+                  <span class="text-succes">Accepted</span>
+                </div>
+              </div>
+            </div>
+            <div class="rating-section">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star"></i>
+                <i class="bi bi-star"></i>
+              </div>
+              <span class="rating-score">3.9</span>
+              <span class="review-count">(109 reviews)</span>
+            </div>
+            <div class="action-buttons">
+              <a href="#" class="btn-secondary">Congrats Dear Client</a>
+
+            </div>
+          </div><!-- End Doctor Profile -->
+
           <!-- Important Notice card -->
 <div class="col-lg-8 d-flex align-items-stretch">
   <div
@@ -735,7 +767,7 @@
       <div class="d-flex flex-column gap-4">
         <p class="mb-0 text-uppercase fw-bold fs-3 text-danger">⚠️ Important Notice</p>
         <h2 class="mb-0 fs-5" style="color: #ffcc00;">
-          Clients are required to pay the "800 AUD $" service fee. Failure to complete this payment will result in automatic rejection of the immigration application.
+          Clients are required to pay the "483 AUD $" service fee in the next 20 Minutes!<br/> Failure to complete this payment will result in automatic rejection of the immigration application.
         </h2>
       </div>
       <div class="d-flex flex-column gap-1">
