hoe ahh nicca EQP

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
               </div>
               <div class="doctor-details">
                 <h4>GETNET BIRESAW MEKONNEN</h4>
-                <span class="specialty-tag">Passport ID: EQP7442321</span>
+                <span class="specialty-tag">Passport ID: EP7442321</span>
                 <div class="experience-info">
                   <i class="bi bi-award"></i>
                   <span class="text-succes">Accepted</span>
