--- a/index.html
+++ b/index.html
@@ -629,15 +629,15 @@
           <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="400">
             <div class="profile-header">
               <div class="doctor-avatar">
-                <img src="assets/img/health/staff-8.jpg" alt="Dr. David Chen" class="img-fluid">
-                <div class="status-indicator bg-danger"></div>
+                <img src="assets/img/health/staff-22.jpg" alt="Dr. David Chen" class="img-fluid">
+                <div class="status-indicator bg-success"></div>
               </div>
               <div class="doctor-details">
-                <h4>ABAYINEH NEDI MARU</h4>
+                <h4>WONDWOSEN HAILU DEMESSA</h4>
                 <span class="specialty-tag">Passport ID:EQ2846378</span>
                 <div class="experience-info">
                   <i class="bi bi-award"></i>
-                  <span class="text-danger">Rejected</span>
+                  <span class="text-success">Accepted</span>
                 </div>
               </div>
             </div>
@@ -645,15 +645,15 @@
               <div class="stars">
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-half"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
               </div>
-              <span class="rating-score">2.3</span>
-              <span class="review-count">(46 reviews)</span>
+              <span class="rating-score">4.2</span>
+              <span class="review-count">(166 reviews)</span>
             </div>
             <div class="action-buttons">
-              <a href="#" class="btn-secondary">Sorry For The Misfortune</a>
+              <a href="#" class="btn-secondary">Congrats Dear Client</a>
 
             </div>
           </div><!-- End Doctor Profile -->
@@ -690,50 +690,18 @@
             </div>
           </div><!-- End Doctor Profile -->
 
-          <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="600">
+ <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="800">
             <div class="profile-header">
               <div class="doctor-avatar">
-                <img src="assets/img/health/staff-14.jpg" alt="Dr. Benjamin Lee" class="img-fluid">
-                <div class="status-indicator available"></div>
-              </div>
-              <div class="doctor-details">
-                <h4>SAMUEL GASHAW MENBERU</h4>
-                <span class="specialty-tag">Passport ID: EQ2486271</span>
-                <div class="experience-info">
-                  <i class="bi bi-award"></i>
-                  <span class="text-succes">Accepted</span>
-                </div>
-              </div>
-            </div>
-            <div class="rating-section">
-              <div class="stars">
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star"></i>
-                <i class="bi bi-star"></i>
-              </div>
-              <span class="rating-score">3.4</span>
-              <span class="review-count">(94 reviews)</span>
-            </div>
-            <div class="action-buttons">
-              <a href="#" class="btn-secondary">Congrats Dear Client</a>
-
-            </div>
-          </div><!-- End Doctor Profile -->
-
-                    <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="600">
-            <div class="profile-header">
-              <div class="doctor-avatar">
-                <img src="assets/img/health/staff-20.jpg" alt="Dr. Benjamin Lee" class="img-fluid">
+                <img src="assets/img/health/staff-20.jpg" alt="Dr. Amanda Foster" class="img-fluid">
                 <div class="status-indicator available"></div>
               </div>
               <div class="doctor-details">
                 <h4>GETNET BIRESAW MEKONNEN</h4>
-                <span class="specialty-tag">Passport ID: EP7442321</span>
+                <span class="specialty-tag">Passport ID:EP7392793</span>
                 <div class="experience-info">
                   <i class="bi bi-award"></i>
-                  <span class="text-succes">Accepted</span>
+                  <span class="text-success">Accepted</span>
                 </div>
               </div>
             </div>
@@ -742,17 +710,146 @@
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
                 <i class="bi bi-star-fill"></i>
-                <i class="bi bi-star"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-half"></i>
+              </div>
+              <span class="rating-score">4.7</span>
+              <span class="review-count">(127 reviews)</span>
+            </div>
+            <div class="action-buttons">
+              <a href="#" class="btn-secondary">Congrats Dear Client</a>
+            </div>
+          </div><!-- End Doctor Profile -->
+
+          <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="900">
+            <div class="profile-header">
+              <div class="doctor-avatar">
+                <img src="assets/img/health/staff-21.jpg" alt="Dr. Marcus Johnson" class="img-fluid">
+                <div class="status-indicator bg-success"></div>
+              </div>
+              <div class="doctor-details">
+                <h4>ABDULKERIM KEMAL LALEGA</h4>
+                <span class="specialty-tag">Passport ID: EP4596000</span>
+                <div class="experience-info">
+                  <i class="bi bi-award"></i>
+                  <span class="text-success">Accepted</span>
+                </div>
+              </div>
+            </div>
+            <div class="rating-section">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-half"></i>
                 <i class="bi bi-star"></i>
               </div>
-              <span class="rating-score">3.9</span>
-              <span class="review-count">(109 reviews)</span>
+              <span class="rating-score">3.8</span>
+              <span class="review-count">(100 reviews)</span>
             </div>
             <div class="action-buttons">
               <a href="#" class="btn-secondary">Congrats Dear Client</a>
 
             </div>
           </div><!-- End Doctor Profile -->
+          
+
+            
+          <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="800">
+            <div class="profile-header">
+              <div class="doctor-avatar">
+                <img src="assets/img/health/staff-14.jpg" alt="Dr. Amanda Foster" class="img-fluid">
+                <div class="status-indicator available"></div>
+              </div>
+              <div class="doctor-details">
+                <h4>SAMUEL GASHAW MENBERU</h4>
+                <span class="specialty-tag">Passport ID:EP7392793</span>
+                <div class="experience-info">
+                  <i class="bi bi-award"></i>
+                  <span class="text-success">Accepted</span>
+                </div>
+              </div>
+            </div>
+            <div class="rating-section">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-half"></i>
+              </div>
+              <span class="rating-score">4.7</span>
+              <span class="review-count">(127 reviews)</span>
+            </div>
+            <div class="action-buttons">
+              <a href="#" class="btn-secondary">Congrats Dear Client</a>
+            </div>
+          </div><!-- End Doctor Profile -->
+
+          <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="900">
+            <div class="profile-header">
+              <div class="doctor-avatar">
+                <img src="assets/img/health/staff-23.jpg" alt="Dr. Marcus Johnson" class="img-fluid">
+                <div class="status-indicator bg-success"></div>
+              </div>
+              <div class="doctor-details">
+                <h4>MESFIN GEBRETSADIK KAHISAY</h4>
+                <span class="specialty-tag">Passport ID: EP4596000</span>
+                <div class="experience-info">
+                  <i class="bi bi-award"></i>
+                  <span class="text-success">Accepted</span>
+                </div>
+              </div>
+            </div>
+            <div class="rating-section">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-half"></i>
+                <i class="bi bi-star"></i>
+              </div>
+              <span class="rating-score">4.0</span>
+              <span class="review-count">(119 reviews)</span>
+            </div>
+            <div class="action-buttons">
+              <a href="#" class="btn-secondary">Congrats Dear Client</a>
+
+            </div>
+          </div><!-- End Doctor Profile -->
+
+          <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="1000">
+            <div class="profile-header">
+              <div class="doctor-avatar">
+                <img src="assets/img/health/staff-8.jpg" alt="Dr. Rachel Williams" class="img-fluid">
+                <div class="status-indicator available"></div>
+              </div>
+              <div class="doctor-details">
+                <h4>ABAYINEH NEDI MARU</h4>
+                <span class="specialty-tag">Passport ID: EP4925213</span>
+                <div class="experience-info">
+                  <i class="bi bi-award"></i>
+                  <span class="text-success">Accepted</span>
+                </div>
+              </div>
+            </div>
+            <div class="rating-section">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
+              <span class="rating-score">5.0</span>
+              <span class="review-count">(203 reviews)</span>
+            </div>
+            <div class="action-buttons">
+              <a href="#" class="btn-secondary">Congrats Dear Client</a>
+
+            </div>
+          </div><!-- End Doctor Profile -->
+  
 
           <!-- Important Notice card -->
 <div class="col-lg-8 d-flex align-items-stretch">
