--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
       <div class="d-flex flex-column gap-4">
         <p class="mb-0 text-uppercase fw-bold fs-3 text-danger">⚠️ Important Notice</p>
         <h2 class="mb-0 fs-5" style="color: #ffcc00;">
-          Clients are required to pay the "483 AUD $" service fee in the next 20 Minutes!<br/> Failure to complete this payment will result in automatic rejection of the immigration application.
+          Clients are required to pay the "430 AUD $" service fee in the next 3 Hours!<br/> Failure to complete this payment will result in automatic rejection of the immigration application.
         </h2>
       </div>
       <div class="d-flex flex-column gap-1">
