after zelalem kewesede behuala or after i talked kostr in chat bet

--- a/index.html
+++ b/index.html
@@ -848,6 +848,38 @@
               <a href="#" class="btn-secondary">Congrats Dear Client</a>
 
             </div>
+          </div>
+          
+          <div class="doctor-profile" data-aos="zoom-in" data-aos-delay="1000">
+            <div class="profile-header">
+              <div class="doctor-avatar">
+                <img src="assets/img/health/staff-33.jpg" alt="Dr. Rachel Williams" class="img-fluid">
+                <div class="status-indicator available"></div>
+              </div>
+              <div class="doctor-details">
+                <h4>HENOK BERHANU YOSEF</h4>
+                <span class="specialty-tag">Passport ID: EP7707273</span>
+                <div class="experience-info">
+                  <i class="bi bi-award"></i>
+                  <span class="text-success">Accepted</span>
+                </div>
+              </div>
+            </div>
+            <div class="rating-section">
+              <div class="stars">
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+                <i class="bi bi-star-fill"></i>
+              </div>
+              <span class="rating-score">4.9</span>
+              <span class="review-count">(198 reviews)</span>
+            </div>
+            <div class="action-buttons">
+              <a href="#" class="btn-secondary">Congrats Dear Client</a>
+
+            </div>
           </div><!-- End Doctor Profile -->
   
 
